Fixes bug in IE10 with search icon overlapping placeholder text.

--- a/assets/source/sass/components/search/_search-form.scss
+++ b/assets/source/sass/components/search/_search-form.scss
@@ -72,7 +72,6 @@
       }
     }
 
-
     @media #{$screen-below-sm} {
       display: none; // Hide button on smaller screens. Make assumtion that the user has an on screen keyboard.
     }
@@ -85,6 +84,12 @@
 
   .c-search-form {
     &__field {
+
+      @media #{$screen-sm-up} {
+        &:-ms-input-placeholder {
+          padding-left: 2.75rem;
+        }
+      }
 
       &:focus {
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3);
@@ -105,6 +110,8 @@
 
   .c-search-form__field {
     border-color: $color-gray-300;
+
+
   }
 }
 
